--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
     </div>
     <!-- 手机端导航 -->
     <div class="mobNav">
-        <ul class="wp">
+        <ul class="">
             <li>
                 <div class="navp flex">
                     <a href="" target="_blank">学校概况</a>
@@ -158,7 +158,7 @@
             </div>
         </div>
 
-        <div class="main-content">
+        <div class="main-content" >
             <!-- 学院介绍 -->
             <div class="content college-content">
                 <div class="college-main content-main wp">
@@ -232,10 +232,10 @@
 
             <!-- 管理团队 -->
             <div class="content mobaily">
-                <div class="content-main mobaily-main wp">
+                <div class="content-main mobaily-main wp" data-aos="fade-up">
                     <h2 class="content-title mobaily-title fs36">管理团队</h2>
 
-                    <div class="mobaily-content flex-sb">
+                    <div class="mobaily-content flex-sb" >
                         <div class="mobaily-item">
                             <div class="item-img">
 
@@ -290,7 +290,7 @@
 
             <!-- 学院发展 -->
             <div class="content develop">
-                <div class="content-main develop-main wp">
+                <div class="content-main develop-main wp" data-aos="fade-up">
                     <h2 class="content-title develop-title fs36">学院发展</h2>
                     <div class="develop-content">
                         <p class="text">
@@ -309,7 +309,7 @@
 
             <!-- 机构设置 -->
             <div class="content institution">
-                <div class="content-main institution-main wp">
+                <div class="content-main institution-main wp" data-aos="fade-up">
                     <h2 class="content-title institution-title fs36">机构设置</h2>
                     <div class="institution-list flex-sb">
                         <div class="institution-item flex-sb">
@@ -378,7 +378,7 @@
 
             <!-- 精彩瞬间 -->
             <div class="branch-activity splendid">
-                <div class="wp">
+                <div class="wp" data-aos="fade-up">
                     <h3 class="fs36 splendid-title" style="text-align: left; ">精彩瞬间</h3>
                     <ul class="branch-list flex-sb">
                         <li class="branch-list-item">
@@ -442,9 +442,11 @@
     </footer>
 
 
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/aos.js"></script>
+    <script src="./js/public.js"></script>
+
 </body>
-<script src="./js/jquery.min.js"></script>
-<script src="./js/aos.js"></script>
-<script src="./js/public.js"></script>
+
 
 </html>
