--- a/employment-information.html
+++ b/employment-information.html
@@ -215,7 +215,7 @@
 
             </div>
             <!-- 信息分类 -->
-            <div class="total-info">
+            <div class="total-info"  data-aos="fade-up">
                 <div class="wp classify">
                     <ul class="tabNav msg-tabNav flex-start aos-init aos-animate">
                         <li data-content="content-1" class=" fs22">校园宣讲会</li>
@@ -1681,7 +1681,7 @@
                 </div>
             </div>
             <!-- 就业指导 -->
-            <div class="guidance">
+            <div class="guidance" data-aos="fade-up">
                 <div class="msg wp flex-sb">
                     <div class="msg-left">
                         <img src="./img/employment/guidance1.png" alt="">
@@ -1728,7 +1728,7 @@
                 </div>
             </div>
             <!-- 就业咨询 -->
-            <div class="consult">
+            <div class="consult" data-aos="fade-up">
                 <h3 class="fs36"> 就业咨询</h3>
                 <div class="total-info">
                     <div class="wp classify">
