--- a/news-bulletin.html
+++ b/news-bulletin.html
@@ -157,8 +157,8 @@
         <div class="content-left flex-sb flex-center">
           <div class="writing">
             <h3 class="fs30 title">党建新闻</h3>
-            <ul class="list">
-              <li class="list-item">
+            <ul class="list" data-aos="fade-up">
+              <li class="list-item"  data-aos="fade-up">
                 <div class="desc flex-sb flex-start flex-column">
                   <img src="./img/news/news-img-1.png" alt="">
                   <div class="text">
@@ -172,7 +172,7 @@
                   <time class="fs14">2023.08</time>
                 </div>
               </li>
-              <li class="list-item">
+              <li class="list-item" data-aos="fade-up">
                 <div class="desc flex-sb flex-start">
                   <img src="./img/news/news-img-2.png" alt="">
                   <div class="text">
@@ -188,8 +188,8 @@
                 </div>
               </li>
             </ul>
-            <ul class="date-list">
-              <li class="date-list-item flex-start">
+            <ul class="date-list" data-aos="fade-up">
+              <li class="date-list-item flex-start" >
                 <div class="item-time " style="line-height: 1.2;">
                   <h4 class="no fs24">06</h4>
                   <time class="fs14">2023.08</time>
@@ -200,7 +200,7 @@
                     届“动感地带”川渝“校园之春”文化艺术体育活动之“‘电’亮青春”川渝大学生电子竞技大赛中，以优异的表现助力四川队夺冠。</p>
                 </div>
               </li>
-              <li class="date-list-item flex-start">
+              <li class="date-list-item flex-start" >
                 <div class="item-time" style="line-height: 1.2;">
                   <h4 class="no fs24">06</h4>
                   <time class="fs14">2023.08</time>
@@ -211,7 +211,7 @@
                     届“动感地带”川渝“校园之春”文化艺术体育活动之“‘电’亮青春”川渝大学生电子竞技大赛中，以优异的表现助力四川队夺冠。</p>
                 </div>
               </li>
-              <li class="date-list-item flex-start">
+              <li class="date-list-item flex-start" >
                 <div class="item-time" style="line-height: 1.2;">
                   <h4 class="no fs24">03</h4>
                   <time class="fs14">2023.08</time>
@@ -222,7 +222,7 @@
                     届“动感地带”川渝“校园之春”文化艺术体育活动之“‘电’亮青春”川渝大学生电子竞技大赛中，以优异的表现助力四川队夺冠。</p>
                 </div>
               </li>
-              <li class="date-list-item flex-start">
+              <li class="date-list-item flex-start" >
                 <div class="item-time" style="line-height: 1.2;">
                   <h4 class="no fs24">01</h4>
                   <time class="fs14">2023.08</time>
@@ -234,8 +234,8 @@
                 </div>
               </li>
             </ul>
-            <ul class="list">
-              <li class="list-item">
+            <ul class="list" data-aos="fade-up">
+              <li class="list-item" data-aos="fade-up">
                 <div class="desc flex-sb flex-start">
                   <img src="./img/news/news-img-3.png" alt="">
                   <div class="text">
@@ -250,8 +250,8 @@
                 </div>
               </li>
             </ul>
-            <ul class="date-list">
-              <li class="date-list-item flex-start">
+            <ul class="date-list" data-aos="fade-up">
+              <li class="date-list-item flex-start" >
                 <div class="item-time" style="line-height: 1.2;">
                   <h4 class="no fs24">26</h4>
                   <time class="fs14">2023.07</time>
