--- a/party-building-work.html
+++ b/party-building-work.html
@@ -19,7 +19,7 @@
     <!-- 头部 -->
     <div class="header trans">
         <div class="wpm flex">
-            <div class="logo v-center">
+            <div class="logo v-center">f
                 <a href="">
                     <img src="img/home/logo.png" alt="" class="logoWhite trans" />
                     <!-- Logo改成蓝色 -->
@@ -211,7 +211,7 @@
 
             </div>
             <!-- 主题教育 -->
-            <div class="education">
+            <div class="education" data-aos="fade-up">
                 <div class="wp main-education">
                     <h3 class="fs36 edu-title">主题教育</h3>
                     <!-- 轮播图 -->
@@ -254,7 +254,7 @@
             </div>
             <!-- 支部概况 -->
             <div class="banchprofile">
-                <div class="wp main-education">
+                <div class="wp main-education" data-aos="fade-up">
                     <h3 class="fs36 edu-title">支部概况</h3>
                     <div class="description">
                         <div class="left-desc" style="color: #121212;">
@@ -269,7 +269,7 @@
             </div>
             <!-- 支部活动 -->
             <div class="branch-activity">
-                <div class="wp">
+                <div class="wp" data-aos="fade-up">
                     <h3 class="fs36">支部活动</h3>
                     <ul class="branch-list flex-sb">
                         <li class="branch-list-item">
