--- a/student-work.html
+++ b/student-work.html
@@ -215,7 +215,7 @@
             </div>
             <!-- 学生支持 -->
             <div class="student-support">
-                <div class="support-desc wp">
+                <div class="support-desc wp" data-aos="fade-up">
                     <h3 class="fs36" style="text-align: center;">学生支持</h3>
                     <ul class="flex-sb support-list">
                         <li>
@@ -277,7 +277,7 @@
             </div>
             <!-- 辅导员队伍 -->
             <div class="counselor-team">
-                <div class="tema-desc wp">
+                <div class="tema-desc wp" data-aos="fade-up">
                     <h3 class="fs36" style="text-align: center; color: #fff;">辅导员队伍</h3>
                     <ul class="flex-sb team-list">
                         <li class="flex-column-center">
@@ -375,7 +375,7 @@
             </div>
             <!-- 学生风采 -->
             <div class="branch-activity">
-                <div class="wp">
+                <div class="wp" data-aos="fade-up">
                     <h3 class="fs36">学生风采</h3>
                     <ul class="branch-list flex-sb">
                         <li class="branch-list-item">
