--- a/news-reading.html
+++ b/news-reading.html
@@ -175,12 +175,15 @@
                             <p>
                                 信息工程学院2022级数字媒体1班邹宇鑫：此次大运会闭幕式真的很“成都”。我们看到了裸眼3D效果的珙桐树在舞台中央片片开花；看到了用古今对照的方式呈现的《蜀川胜概图》；看到了玩起“混搭”风的大运会吉祥物蓉宝……它们精细勾勒出了成都这座历史悠久、文化璀璨、科技创新的城市轮廓。闭幕式为成都大运会画上了一个完美句号，让我们共同期待并努力创造更加美好的未来吧!
                             </p>
-                            <p> 教育学院2022级学前教育19班徐娟：闭幕式将中华千年历史传承展现得淋漓尽致，将成都这座城市的魅力展现得淋漓尽致，让我感到十分激动与震撼！创新科技、环保可持续、全球友谊、感动瞬间……这些看点构成了这场表演的核心。这不仅仅是一场演出，更是一场情感的共鸣，让我深深为之动容！</p>
-                            <p> 信息工程2022届数字媒体5班何琀：整场闭幕式充满了活力和热情！色彩斑斓的焰火绽放在夜空中，犹如绚丽的花朵，美得心醉。闭幕式通过场地设置、视觉呈现手段等多种方式的创新，把当下流行的直播和年轻人喜欢的流行文化搬上舞台，向世界展示一个绚丽多彩的成都，给人眼前一亮，让人记忆深刻。各国运动员和代表团的荣誉和成就，让我更加珍惜自己的努力和付出，也激励我不断前进和努力。</p>
-                            <p>教育学院2022级休闲体育1班蔡林宏：大学生运动会是一场充满活力和激情的体育盛事，而闭幕式则是这场盛宴的压轴之作。世界大学生运动会不仅是一次比赛，更是一趟欢乐的旅程。大运会圆满落幕，让我明白所有的运气和惊喜都来自于认真和努力！同时，我想对参与此次体育盛事的所有运动员、工作人员说：你们辛苦了！</p>
+                            <p> 教育学院2022级学前教育19班徐娟：闭幕式将中华千年历史传承展现得淋漓尽致，将成都这座城市的魅力展现得淋漓尽致，让我感到十分激动与震撼！创新科技、环保可持续、全球友谊、感动瞬间……这些看点构成了这场表演的核心。这不仅仅是一场演出，更是一场情感的共鸣，让我深深为之动容！
+                            </p>
+                            <p> 信息工程2022届数字媒体5班何琀：整场闭幕式充满了活力和热情！色彩斑斓的焰火绽放在夜空中，犹如绚丽的花朵，美得心醉。闭幕式通过场地设置、视觉呈现手段等多种方式的创新，把当下流行的直播和年轻人喜欢的流行文化搬上舞台，向世界展示一个绚丽多彩的成都，给人眼前一亮，让人记忆深刻。各国运动员和代表团的荣誉和成就，让我更加珍惜自己的努力和付出，也激励我不断前进和努力。
+                            </p>
+                            <p>教育学院2022级休闲体育1班蔡林宏：大学生运动会是一场充满活力和激情的体育盛事，而闭幕式则是这场盛宴的压轴之作。世界大学生运动会不仅是一次比赛，更是一趟欢乐的旅程。大运会圆满落幕，让我明白所有的运气和惊喜都来自于认真和努力！同时，我想对参与此次体育盛事的所有运动员、工作人员说：你们辛苦了！
+                            </p>
                         </section>
                     </div>
-                  
+
                 </div>
                 <div class="content-right">
                     <ul class="accordion">
@@ -344,11 +347,13 @@
         </div>
         <div class="wp copyright">COPYRIGHT RESERVED ©版权所有 德阳科贸职业学院 | 四川因子数教育管理有限公司 蜀ICP备200029</div>
     </footer>
+
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/aos.js"></script>
+    </script>
+    <script src="./js/public.js"></script>
+    <script src="./js/news.js"></script>
 </body>
-<script src="./js/jquery.min.js"></script>
-<script src="./js/aos.js"></script>
-</script>
-<script src="./js/public.js"></script>
-<script src="./js/news.js"></script>
+
 
 </html>
