--- a/about.html
+++ b/about.html
@@ -199,9 +199,9 @@
                             </ul>
                         </div>
                         <div class="singePage">
-                            <p>德阳科贸职业学院是经四川省人民政府批准、教育部备案的统招全日制普通高等院校，系教育部2019年公布的全国七所、西南唯一“互联网＋中国制造2025”产教融合促进计划建设院校（高职）。数字产业学院是以数字产业为依托，整合行业、企业优质资源，深化产教融合，积极探索符合现代产业需要的数字技能人才培养新模式。
+                            <p class="line4">德阳科贸职业学院是经四川省人民政府批准、教育部备案的统招全日制普通高等院校，系教育部2019年公布的全国七所、西南唯一“互联网＋中国制造2025”产教融合促进计划建设院校（高职）。数字产业学院是以数字产业为依托，整合行业、企业优质资源，深化产教融合，积极探索符合现代产业需要的数字技能人才培养新模式。
                             </p>
-                            <p>
+                            <p class="line5">
                                 数字产业学院是德阳科贸职业学院与成都交大大数据科技有限公司联合发起的人才培养新区，学院拥有专业配套的计算机机房、实训基地，与腾讯、阿里云、蚂蚁金服等多家大型企事业单位签订了校企合作协议共建校企实训基地。学院师资力量雄厚，现有专职教师56人，其中正高级4人、副高级20人，具有硕士学位教师占比达65%，团队成员主持多项国家级、省级课题，获国家级奖励多项。
                             </p>
                         </div>
