--- a/apply-for-us.html
+++ b/apply-for-us.html
@@ -228,33 +228,33 @@
                     <img src="./img/apply/icon-01.png" alt="">
                   </div>
                   <p>招生计划：</p>
-                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
+                  <p class="item-last line1">学院所有专业均投入单独招生计划 </p>
                 </li>
                 <li class="list-item flex">
                   <div class="application-icon">
                     <img src="./img/apply/icon-02.png" alt="">
                   </div>
                   <p>招生计划：</p>
-                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
+                  <p class="item-last line1">学院所有专业均投入单独招生计划 </p>
                 </li>
                 <li class="list-item flex">
                   <div class="application-icon">
                     <img src="./img/apply/icon-03.png" alt="">
                   </div>
                   <p>招生计划：</p>
-                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
+                  <p class="item-last line1">学院所有专业均投入单独招生计划 </p>
                 </li>
                 <li class="list-item flex">
                   <div class="application-icon">
                     <img src="./img/apply/icon-01.png" alt="">
                   </div>
                   <p>招生计划：</p>
-                  <p class="item-last">学生报名后，参加省统一命题的文化科目考试 （语文、数学、英语）和学校统一组织的技能测 试，由学校自行划定分数线确定录取名单。</p>
+                  <p class="item-last line3">学生报名后，参加省统一命题的文化科目考试 （语文、数学、英语）和学校统一组织的技能测 试，由学校自行划定分数线确定录取名单。</p>
                 </li>
               </ul>
             </div>
 
-            <div class="application-item" data-aos="fade-left">
+            <div class="application-item" data-aos="fade-right">
               <div class="application-item-title">
                 <h3 class="fs30">单独招生</h3>
               </div>
@@ -264,28 +264,28 @@
                     <img src="./img/apply/icon-01.png" alt="">
                   </div>
                   <p>招生计划：</p>
-                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
+                  <p class="item-last line1">学院所有专业均投入单独招生计划 </p>
                 </li>
                 <li class="list-item flex">
                   <div class="application-icon">
                     <img src="./img/apply/icon-02.png" alt="">
                   </div>
                   <p>招生计划：</p>
-                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
+                  <p class="item-last line1">学院所有专业均投入单独招生计划 </p>
                 </li>
                 <li class="list-item flex">
                   <div class="application-icon">
                     <img src="./img/apply/icon-03.png" alt="">
                   </div>
                   <p>招生计划：</p>
-                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
+                  <p class="item-last line1">学院所有专业均投入单独招生计划 </p>
                 </li>
                 <li class="list-item flex">
                   <div class="application-icon">
                     <img src="./img/apply/icon-01.png" alt="">
                   </div>
                   <p>招生计划：</p>
-                  <p class="item-last">学生报名后，参加省统一命题的文化科目考试 （语文、数学、英语）和学校统一组织的技能测 试，由学校自行划定分数线确定录取名单。</p>
+                  <p class="item-last line3">学生报名后，参加省统一命题的文化科目考试 （语文、数学、英语）和学校统一组织的技能测 试，由学校自行划定分数线确定录取名单。</p>
                 </li>
               </ul>
             </div>
@@ -553,7 +553,7 @@
                 <hr class="main-hr">
                 <div class="main-map-conent">
                   <p class="map-text-one">学生学习所在校区，日常办公区域</p>
-                  <p class="addrens fs14">地址：四川省广汉市三星堆大道东段122号德阳科贸专业学院6号教学楼3楼、3号教学楼3楼</p>
+                  <p class="addrens fs14 line2">地址：四川省广汉市三星堆大道东段122号德阳科贸专业学院6号教学楼3楼、3号教学楼3楼</p>
                   <img src="./img/apply/map-01.png" alt="">
                 </div>
               </div>
@@ -562,7 +562,7 @@
                 <hr class="main-hr">
                 <div class="main-map-conent">
                   <p class="map-text-one">学生学习所在校区，日常办公区域</p>
-                  <p class="addrens fs14">地址：四川省广汉市三星堆大道东段122号德阳科贸专业学院6号教学楼3楼、3号教学楼3楼</p>
+                  <p class="addrens fs14 line2">地址：四川省广汉市三星堆大道东段122号德阳科贸专业学院6号教学楼3楼、3号教学楼3楼</p>
                   <img src="./img/apply/map-02.png" alt="">
                 </div>
               </div>
