--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
                     <p>广汉办公区：四川省广汉市三星堆大道东段122号德阳科贸</p>
                 </div>
             </div>
-        </div>Stellar.js
+        </div>
         <div class="wp copyright">COPYRIGHT RESERVED ©版权所有 德阳科贸职业学院 | 四川因子数教育管理有限公司 蜀ICP备200029</div>
     </footer>
     <!-- include js -->
