--- a/about.html
+++ b/about.html
@@ -244,7 +244,7 @@
                             <div class="item-text">
                                 <h5 class="text-title fs18">
                                     院长</h5>
-                                <p class="text line8 fs14">
+                                <p class="text line8 fs14 line5">
                                     冯军焕，工学博士，教授，陕西扶风人，1962年生。曾任西南交通大学信息科学与技术学院党委书记、软件学院院长、信息中心主任等职务，主要从事计算机软件、计算机多媒体技术与应用、计算机网络、Internet技术与应用、Ad
                                     Hoc网络、现代教育技术方面的教学和研究工作。</p>
                             </div>
@@ -258,7 +258,7 @@
                             <div class="item-text">
                                 <h5 class="text-title fs18">
                                     院长</h5>
-                                <p class="text line8 fs14">
+                                <p class="text line8 fs14 line5">
                                     冯军焕，工学博士，教授，陕西扶风人，1962年生。曾任西南交通大学信息科学与技术学院党委书记、软件学院院长、信息中心主任等职务，主要从事计算机软件、计算机多媒体技术与应用、计算机网络、Internet技术与应用、Ad
                                     Hoc网络、现代教育技术方面的教学和研究工作。</p>
                             </div>
@@ -272,7 +272,7 @@
                             <div class="item-text">
                                 <h5 class="text-title fs18">
                                     院长</h5>
-                                <p class="text line8 fs14">
+                                <p class="text line8 fs14 line5">
                                     冯军焕，工学博士，教授，陕西扶风人，1962年生。曾任西南交通大学信息科学与技术学院党委书记、软件学院院长、信息中心主任等职务，主要从事计算机软件、计算机多媒体技术与应用、计算机网络、Internet技术与应用、Ad
                                     Hoc网络、现代教育技术方面的教学和研究工作。</p>
                             </div>
@@ -299,7 +299,7 @@
 
                         <div class="img">
                             <img src="./img/about/develop.png" alt="" class="pc-img-show">
-                            <img src="./img/about/develop.png" alt="" class="pc--img-hide">
+                            <img src="./img/about/develop-mb.png" alt="" class="pc--img-hide">
                         </div>
                     </div>
 
