--- a/party-building-work.html
+++ b/party-building-work.html
@@ -18,7 +18,7 @@
 <body>
     <div class="header trans">
         <div class="wpm flex">
-            <div class="logo v-center">f
+            <div class="logo v-center">
                 <a href="">
                     <img src="img/home/logo.png" alt="" class="logoWhite trans" />
                     <!-- Logo改成蓝色 -->
