--- a/personnel-training.html
+++ b/personnel-training.html
@@ -170,7 +170,7 @@
                                 <div>
                                     <p class="title fs18 line3" style="color: #fff;">综合素质高</p>
                                     <span
-                                        style="color: #FFC273;line-height: 1.5;" class="line2">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
+                                        style="color: #FFC273;line-height: 1.5;" class="line2 fs14">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
                                 </div>
                             </div>
                             <div class="flex-start list-item" style="align-items: flex-start;">
@@ -178,7 +178,7 @@
                                 <div>
                                     <p class="title fs18" style="color: #fff;">综合素质高</p>
                                     <span
-                                        style="color: #FFC273;line-height: 1.5;" class="line2">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
+                                        style="color: #FFC273;line-height: 1.5;" class="line2 fs14">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
                                 </div>
                             </div>
                             <div class="flex-start list-item" style="align-items: flex-start;">
@@ -186,7 +186,7 @@
                                 <div>
                                     <p class="title fs18" style="color: #fff;">综合素质高</p>
                                     <span
-                                        style="color: #FFC273;line-height: 1.5;" class="line2">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
+                                        style="color: #FFC273;line-height: 1.5;" class="line2 fs14">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
                                 </div>
                             </div>
                             <div class="flex-start list-item" style="align-items: flex-start;">
@@ -194,7 +194,7 @@
                                 <div>
                                     <p class="title fs18" style="color: #fff;">综合素质高</p>
                                     <span
-                                        style="color: #FFC273;line-height: 1.5;" class="line2">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
+                                        style="color: #FFC273;line-height: 1.5;" class="line2 fs14">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
                                 </div>
                             </div>
                             <div class="flex-start list-item" style="align-items: flex-start;">
@@ -202,7 +202,7 @@
                                 <div>
                                     <p class="title fs18" style="color: #fff;">综合素质高</p>
                                     <span
-                                        style="color: #FFC273;line-height: 1.5;" class="line2">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
+                                        style="color: #FFC273;line-height: 1.5;" class="line2 fs14">学生理想信念坚定，德、智、体、美、劳全面发展，具有良好的思想素质、文化素质、职业素质和身心素质。</span>
                                 </div>
                             </div>
                         </div>
